--- a/index.html
+++ b/index.html
@@ -1,12 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Developer Portfolio</title>
-    <link rel="stylesheet" href="style/style.css">
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="style/portfolio.css" />
+  </head>
+  <body class="open-sans-normal">
+    <!-- header part html start  -->
+    <header class="header">
+      <nav>
+        <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
+        <ul>
+          <li><a class="dark-2" href="">Portfolio</a></li>
+          <li><a class="dark-2" href="">Blog</a></li>
+          <li>
+            <a href=""><button class="btn-primary">Hire Me</button></a>
+          </li>
+        </ul>
+      </nav>
+
+      <div class="banner">
+        <div class="banner-content">
+          <h4 class="banner-greetings dark-2">Hi, I am</h4>
+          <h1 class="banner-title dark-1">Mary Hardy</h1>
+          <p class="banner-description dark-3">
+            Shot what able cold new see hold.Friendly as an betrayed formerly
+            he. Morning because as to society behaved moments.
+          </p>
+          <button class="btn-primary">Download CV</button>
+          <button class="btn-primary">Contact</button>
+        </div>
+        <img class="banner-profile-pic" src="images/hardy.png" alt="">
+      </div>
+    </header>
+    <!-- header part html end  -->
+    <!-- header main part html start  -->
+    <main>
+
+    </main>
+    <!-- header main part html start  -->
+    <footer></footer>
+  </body>
 </html>
