added an about section

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body class="open-sans-normal">
     <!-- header part html start  -->
-    <header class="header">
+    <header class="header secondary-bg">
       <nav>
         <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
         <ul>
@@ -31,12 +31,42 @@
           <button class="btn-primary">Download CV</button>
           <button class="btn-primary">Contact</button>
         </div>
-        <img class="banner-profile-pic" src="images/hardy.png" alt="">
+        <img class="banner-profile-pic" src="images/hardy.png" alt="" />
       </div>
     </header>
     <!-- header part html end  -->
     <!-- header main part html start  -->
     <main>
+        <!-- main part > section about html start  -->
+      <section class="about secondary-bg">
+        <h3 class="section-title">About Me</h3>
+        <p class="section-description">
+          I, m a designer & developer with a passion for web design. I enjoy
+          developing simple, clean and slick websites that provide real value to
+          the end user. Thousands of clients have procured exceptional resulfs
+          while working with me. Delivering work within time and budget which
+          meets clients requirements in our mata.
+        </p>
+        <div class="about-items">
+            <div class="about-item">
+                <p class="about-title dark-3">Name:</p>
+                <p class="about-description dark-2">Mary Hardy</p>
+            </div>
+            <div class="about-item dark-3">
+                <p class="about-title">Email:</p>
+                <p class="about-description dark-2">info@gmail.com</p>
+            </div>
+            <div class="about-item dark-3">
+                <p class="about-title">Date Of Birth:</p>
+                <p class="about-description dark-2">11 November 1987</p>
+            </div>
+            <div class="about-item dark-3">
+                <p class="about-title dark-2">Form</p>
+                <p class="about-description dark-2">Los Angels, USA</p>
+            </div>
+        </div>
+      </section>
+        <!-- main part > section about html start  -->
 
     </main>
     <!-- header main part html start  -->
