--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <!-- header part html end  -->
     <!-- header main part html start  -->
     <main>
-        <!-- main part > section about html start  -->
+      <!-- main part > section about html start  -->
       <section class="about secondary-bg">
         <h3 class="section-title">About Me</h3>
         <p class="section-description">
@@ -48,26 +48,74 @@
           meets clients requirements in our mata.
         </p>
         <div class="about-items">
-            <div class="about-item">
-                <p class="about-title dark-3">Name:</p>
-                <p class="about-description dark-2">Mary Hardy</p>
-            </div>
-            <div class="about-item dark-3">
-                <p class="about-title">Email:</p>
-                <p class="about-description dark-2">info@gmail.com</p>
-            </div>
-            <div class="about-item dark-3">
-                <p class="about-title">Date Of Birth:</p>
-                <p class="about-description dark-2">11 November 1987</p>
-            </div>
-            <div class="about-item dark-3">
-                <p class="about-title dark-2">Form</p>
-                <p class="about-description dark-2">Los Angels, USA</p>
-            </div>
+          <div class="about-item">
+            <p class="about-title dark-3">Name:</p>
+            <p class="about-description dark-2">Mary Hardy</p>
+          </div>
+          <div class="about-item dark-3">
+            <p class="about-title">Email:</p>
+            <p class="about-description dark-2">info@gmail.com</p>
+          </div>
+          <div class="about-item dark-3">
+            <p class="about-title">Date Of Birth:</p>
+            <p class="about-description dark-2">11 November 1987</p>
+          </div>
+          <div class="about-item dark-3">
+            <p class="about-title dark-2">Form</p>
+            <p class="about-description dark-2">Los Angels, USA</p>
+          </div>
         </div>
       </section>
-        <!-- main part > section about html start  -->
-
+      <!-- main part > section about html start  -->
+      <!-- main part > section skills html start  -->
+      <section class="skills">
+        <h3 class="section-title text-center">What I do</h3>
+        <p class="section-description text-center description-padding">
+          I have more than 10 years experience building software for clients all
+          over the world. Below is a quick overview of my main technical skill
+          sets and technologies i use. Want to find out more about my
+          experience? Check out my online resume and project portfolio.
+        </p>
+        <div class="skill-container">
+          <div class="skill">
+            <img src="images/icons/js.png" alt="" />
+            <h4 class="skill-title dark-1">Vanilla JavaScript</h4>
+            <p class="skill-description">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+          <div class="skill">
+            <img src="images/icons/react.png" alt="" />
+            <h4 class="skill-title">React</h4>
+            <p class="skill-description">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+          <div class="skill">
+            <img src="images/icons/nodejs.png" alt="" />
+            <h4 class="skill-title">Node.js</h4>
+            <p class="skill-description">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+          <div class="skill">
+            <img src="images/icons/mongo.png" alt="" />
+            <h4 class="skill-title">MongoDB</h4>
+            <p class="skill-description">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+        </div>
+      </section>
+      <!-- main part > section skills html end  -->
     </main>
     <!-- header main part html start  -->
     <footer></footer>
