--- a/index.html
+++ b/index.html
@@ -116,6 +116,88 @@
         </div>
       </section>
       <!-- main part > section skills html end  -->
+      <!-- main part > section resume html start  -->
+      <section class="resume">
+        <h3 class="section-title text-center">A summary of My Resume</h3>
+        <div class="resume-container">
+          <div class="resume-column">
+            <h3 class="resume-column-title dark-2">My Education</h3>
+            <div class="experience">
+              <h4 class="experience-title dark-2">Master in Computer Engineering</h4>
+              <h5 class="experience-sub-title dark-3">
+                Harvard University / 2015 - 2017
+              </h5>
+              <div class="experience-description dark-3">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </div>
+            </div>
+            <hr class="dark-5">
+            <div class="experience">
+              <h4 class="experience-title dark-2">Master in Computer Engineering</h4>
+              <h5 class="experience-sub-title dark-3">
+                Harvard University / 2015 - 2017
+              </h5>
+              <div class="experience-description dark-3">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </div>
+            </div>
+            <hr class="dark-5 line">
+            <div class="experience">
+              <h4 class="experience-title dark-2">Master in Computer Engineering</h4>
+              <h5 class="experience-sub-title dark-3">
+                Harvard University / 2015 - 2017
+              </h5>
+              <div class="experience-description dark-3">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </div>
+            </div>
+          </div>
+
+          <div class="resume-column">
+            <h3 class="resume-column-title dark-2">My Experience</h3>
+            <div class="experience">
+              <h4 class="experience-title dark-2">Sr. Font End Developer</h4>
+              <h5 class="experience-sub-title dark-3">Apple Inc / 2020 - Current</h5>
+              <div class="experience-description dark-3">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </div>
+            </div>
+            <hr class="dark-5">
+            <div class="experience">
+              <h4 class="experience-title dark-2">Jr. Font End Developer</h4>
+              <h5 class="experience-sub-title dark-3">Dribbble Inc / 2018 - 2022</h5>
+              <div class="experience-description dark-3">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </div>
+            </div>
+            <hr class="dark-5">
+            <div class="experience">
+              <h4 class="experience-title dark-2">HTML Developer</h4>
+              <h5 class="experience-sub-title dark-3">Adobe Inc / 2017 - 2018</h5>
+              <div class="experience-description dark-3">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="btn-download-cv text-center">
+          <button class="btn-primary ">Download CV</button>
+        </div>
+      </section>
+
+      <!-- main part > section resume html end  -->
     </main>
     <!-- header main part html start  -->
     <footer></footer>
