--- a/index.html
+++ b/index.html
@@ -123,7 +123,9 @@
           <div class="resume-column">
             <h3 class="resume-column-title dark-2">My Education</h3>
             <div class="experience">
-              <h4 class="experience-title dark-2">Master in Computer Engineering</h4>
+              <h4 class="experience-title dark-2">
+                Master in Computer Engineering
+              </h4>
               <h5 class="experience-sub-title dark-3">
                 Harvard University / 2015 - 2017
               </h5>
@@ -133,9 +135,11 @@
                 commodo ligula eget dolor.
               </div>
             </div>
-            <hr class="dark-5">
+            <hr class="dark-5" />
             <div class="experience">
-              <h4 class="experience-title dark-2">Master in Computer Engineering</h4>
+              <h4 class="experience-title dark-2">
+                Master in Computer Engineering
+              </h4>
               <h5 class="experience-sub-title dark-3">
                 Harvard University / 2015 - 2017
               </h5>
@@ -145,9 +149,11 @@
                 commodo ligula eget dolor.
               </div>
             </div>
-            <hr class="dark-5 line">
+            <hr class="dark-5 line" />
             <div class="experience">
-              <h4 class="experience-title dark-2">Master in Computer Engineering</h4>
+              <h4 class="experience-title dark-2">
+                Master in Computer Engineering
+              </h4>
               <h5 class="experience-sub-title dark-3">
                 Harvard University / 2015 - 2017
               </h5>
@@ -163,27 +169,33 @@
             <h3 class="resume-column-title dark-2">My Experience</h3>
             <div class="experience">
               <h4 class="experience-title dark-2">Sr. Font End Developer</h4>
-              <h5 class="experience-sub-title dark-3">Apple Inc / 2020 - Current</h5>
+              <h5 class="experience-sub-title dark-3">
+                Apple Inc / 2020 - Current
+              </h5>
               <div class="experience-description dark-3">
                 List skill/technologies here. You can change the icon above to
                 any of the 1500+ FontAwesome 5 free icons available. Aenean
                 commodo ligula eget dolor.
               </div>
             </div>
-            <hr class="dark-5">
+            <hr class="dark-5" />
             <div class="experience">
               <h4 class="experience-title dark-2">Jr. Font End Developer</h4>
-              <h5 class="experience-sub-title dark-3">Dribbble Inc / 2018 - 2022</h5>
+              <h5 class="experience-sub-title dark-3">
+                Dribbble Inc / 2018 - 2022
+              </h5>
               <div class="experience-description dark-3">
                 List skill/technologies here. You can change the icon above to
                 any of the 1500+ FontAwesome 5 free icons available. Aenean
                 commodo ligula eget dolor.
               </div>
             </div>
-            <hr class="dark-5">
+            <hr class="dark-5" />
             <div class="experience">
               <h4 class="experience-title dark-2">HTML Developer</h4>
-              <h5 class="experience-sub-title dark-3">Adobe Inc / 2017 - 2018</h5>
+              <h5 class="experience-sub-title dark-3">
+                Adobe Inc / 2017 - 2018
+              </h5>
               <div class="experience-description dark-3">
                 List skill/technologies here. You can change the icon above to
                 any of the 1500+ FontAwesome 5 free icons available. Aenean
@@ -193,13 +205,50 @@
           </div>
         </div>
         <div class="btn-download-cv text-center">
-          <button class="btn-primary ">Download CV</button>
+          <button class="btn-primary">Download CV</button>
         </div>
       </section>
-
       <!-- main part > section resume html end  -->
     </main>
     <!-- header main part html start  -->
-    <footer></footer>
+     <!-- footer part html start  -->
+    <footer class="secondary-bg">
+      <div class="footer-column left-footer-column">
+        <h3 class="section-title dark-1">Lets Connect</h3>
+        <p class="section-description dark-2">
+          Please fill out the form on this section to contact with me or call
+          between 9:00 A.M and 8.00 P.M ET, Monday through Friday.
+        </p>
+        <div class="icon-center">
+          <a href="https://www.facebook.com/" target="_blank"
+            ><img src="images/icons/facebook.png" alt=""
+          /></a>
+          <a href="https://x.com/" target="_blank"
+            ><img src="images/icons/twitter.png" alt=""
+          /></a>
+          <a
+            href="https://www.instagram.com/accounts/login/?hl=en"
+            target="_blank"
+            ><img src="images/icons/insta.png" alt=""
+          /></a>
+        </div>
+      </div>
+      <div class="footer-column">
+        <h3 class="section-title dark-1">Let’s Message me</h3>
+        <form action="">
+          <input type="text" name=" " id="" placeholder="Your Name" />
+          <input type="email" name=" " id="" placeholder="Your Email" />
+          <textarea
+            name=""
+            id=""
+            cols="30"
+            rows="50"
+            placeholder="Inbox Me"
+          ></textarea>
+          <input class="btn-primary" type="submit" placeholder="submit" />
+        </form>
+      </div>
+    </footer>
+     <!-- footer part html end -->
   </body>
 </html>
