added a font awsome icon

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Developer Portfolio</title>
     <link rel="stylesheet" href="style/portfolio.css" />
+    <script
+      src="https://kit.fontawesome.com/9321192abe.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body class="open-sans-normal">
     <!-- header part html start  -->
@@ -28,8 +32,8 @@
             Shot what able cold new see hold.Friendly as an betrayed formerly
             he. Morning because as to society behaved moments.
           </p>
-          <button class="btn-primary">Download CV</button>
-          <button class="btn-primary">Contact</button>
+          <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
+          <button class="btn-primary"><i class="fa-solid fa-phone"></i> Contact</button>
         </div>
         <img class="banner-profile-pic" src="images/hardy.png" alt="" />
       </div>
@@ -205,13 +209,15 @@
           </div>
         </div>
         <div class="btn-download-cv text-center">
-          <button class="btn-primary">Download CV</button>
+          <button class="btn-primary">
+            <i class="fa-solid fa-download"></i> Download CV
+          </button>
         </div>
       </section>
       <!-- main part > section resume html end  -->
     </main>
     <!-- header main part html start  -->
-     <!-- footer part html start  -->
+    <!-- footer part html start  -->
     <footer class="secondary-bg">
       <div class="footer-column left-footer-column">
         <h3 class="section-title dark-1">Lets Connect</h3>
@@ -249,6 +255,6 @@
         </form>
       </div>
     </footer>
-     <!-- footer part html end -->
+    <!-- footer part html end -->
   </body>
 </html>
